--- a/binder_tokio/Cargo.toml
+++ b/binder_tokio/Cargo.toml
@@ -11,5 +11,6 @@ rust-version.workspace = true
 
 [dependencies]
 binder = { package = "binder_ndk", path = "../binder", version = "0" }
+smol = "2.0.2"
 tokio = { version = "1.43.0", features = ["full"] }
 tokio-runtime = "0.0.0"
